fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #647acb #e4e7eb;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #e4e7eb;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #647acb;
+  border-radius: 10px;
+  border: 3px solid #e4e7eb;
+}
+
 body {
   @apply bg-cool-grey-100 text-cool-grey-800 font-mono;
 }
